bdr.BDR.scala.error
Erreur de compilation :
BDR:4: error: not found: value R
  if(message==R){
              ^BDR:8: error: not found: value L
  if(message==L){
              ^BDR:12: error: not found: value I
  if(message==I){
              ^BDR:17: error: not found: value A
  if(message==A){
              ^BDR:20: error: not found: value B
  if(message==B){
              ^BDR:24: error: not found: value C
  if(message==C){
              ^BDR:29: error: not found: value Z
  if(message==Z){
              ^BDR:32: error: not found: value Y
  if(message==Y){
              ^BDR:36: error: not found: value X
  if(message==X){
              ^